Fix content overlap on narrow screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ div.section p {
     margin: 0px;
   }
 
-  #home,
+  /* #home,
   #about,
   #exp,
   #proj,
@@ -295,5 +295,5 @@ div.section p {
     margin: auto;
     width: 80%;
     padding-top: 250px;
-  }
+  } */
 }
